syntax = "proto3";
package by.llargoz.accountpaymentservice.grpc;

option java_multiple_files = true;

message PaymentRequest {
  double amount = 1;
}

message PaymentResponse {
  string status = 1;
}

service PaymentService {
  rpc makePayment (PaymentRequest) returns (PaymentResponse);
}
